--- a/modules/ameritrade/menu.html
+++ b/modules/ameritrade/menu.html
@@ -1,8 +1,8 @@
-
-
-    <Menu.Item className="item" key="6">
-      <Link to="/brokers">
-	<Icon type="sliders" />
-	<span>Broker Accounts</span>
+    <Menu.Item className="item" key="5">
+      <Link  to="ameritrade">
+	<Icon type="experiment" />
+	<span>Ameritrade</span>
       </Link>
     </Menu.Item>
+
+
