--- a/modules/coinbase/menu.html
+++ b/modules/coinbase/menu.html
@@ -1,7 +1,7 @@
     <Menu.Item className="item" key="4">
-      <Link  to="alpaca">
+      <Link  to="coinbase">
 	<Icon type="experiment" />
-	<span>Alpaca</span>
+	<span>Coinbase</span>
       </Link>
     </Menu.Item>
 
