--- a/modules/strategies/menu.html
+++ b/modules/strategies/menu.html
@@ -17,7 +17,24 @@
 	  <span>{strategy}</span>
 	</Link>
       </Menu.Item>
+
     ))}
+
+      <Menu.Item className="item" key="10">
+        <Link  to="strategy1">
+	  <Icon type="experiment" />
+	  <span>Strategy1</span>
+        </Link>
+      </Menu.Item>
+
+      <Menu.Item className="item" key="11">
+        <Link  to="strategy2">
+	  <Icon type="experiment" />
+	  <span>Strategy2</span>
+        </Link>
+      </Menu.Item>
+
+
   </SubMenu>
 
 
