--- a/modules/Portfolio/menu.html
+++ b/modules/Portfolio/menu.html
@@ -1,5 +1,5 @@
   <Menu.Item className="item"key="200">
-	<Link to="/overview">
+	<Link to="/portfolio">
     <Icon type="desktop" />
     <span>Porfolio</span>
 
