--- a/modules/Mongodb/menu.html
+++ b/modules/Mongodb/menu.html
@@ -1,7 +1,7 @@
-    <Menu.Item className="item" key="3">
-      <Link to="/heat-vision">
+    <Menu.Item className="item" key="60">
+      <Link to="/mongodb">
 	<Icon type="dot-chart" />
-	<span>MySQL</span>
+	<span>MongoDB</span>
       </Link>
     </Menu.Item>
 
