--- a/modules/Strategies/menu.html
+++ b/modules/Strategies/menu.html
@@ -11,7 +11,7 @@
     }
   >
     {this.state.loaded && this.state.strategies.map((strategy, index) => (
-      <Menu.Item className="item" key={index+11}>
+      <Menu.Item className="item" key={index+11} >
 	<Link to={`/strategy/${strategy}`}>
 	  <Icon type="stock" />
 	  <span>{strategy}</span>
@@ -20,19 +20,31 @@
 
     ))}
 
-      <Menu.Item className="item" key="100">
+      <Menu.Item className="item" key="100" style={{ background: '#090909'}}>
         <Link  to="strategy1">
 	  <Icon type="experiment" />
 	  <span>Strategy1</span>
         </Link>
       </Menu.Item>
 
-      <Menu.Item className="item" key="101">
+      <Menu.Item className="item" key="101" style={{ background: '#090909'}}>
         <Link  to="strategy2">
 	  <Icon type="experiment" />
 	  <span>Strategy2</span>
         </Link>
       </Menu.Item>
+
+      <Menu.Item className="item" key="103" style={{ background: '#090909'}}>
+        <Link  to="strategy3">
+	  <Icon type="experiment" />
+	  <span>Strategy3</span>
+        </Link>
+      </Menu.Item>
+
+
+{/* Automated Submenu */}
+
+{/* Automated Submenu */}
 
 
   </SubMenu>
